--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio",
+  "homepage": "https://petarwho.github.io/Portfolio",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://petarwho.github.io/Portfolio",
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
