--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://petarwho.github.io/Portfolio",
+  "homepage": "https://petarwho.github.io/Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
