--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Copy 404.html for GitHub Pages SPA
+        run: cp public/404.html dist/404.html
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
